--- a/index.html
+++ b/index.html
@@ -1,310 +1,264 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<title>Idol Searcher</title>
-<meta name="viewport" content="width=device-width, initial-scale=1">
+<meta charset="utf-8" />
+<meta name="viewport" content="width=device-width,initial-scale=1" />
+<title>🔎 Idol Searcher</title>
 
 <style>
-    :root {
-        --bg: #0e0e0e;
-        --panel: #111;
-        --card: #1a1a1a;
-        --accent: #ff7bcb;
-        --accent-soft: #ff9ed6;
-        --text: #f5f5f5;
-    }
+:root {
+  --bg: radial-gradient(circle at top, #141414 0%, #0a0a0a 100%);
+  --card: #1b1b1b;
+  --accent: #ff7bcb;
+  --accent-hover: #ff94d8;
+  --text: #f4f4f4;
+  --muted: #aaa;
+}
 
-    body {
-        margin: 0;
-        background: var(--bg);
-        color: var(--text);
-        font-family: "Poppins", sans-serif;
-        display: flex;
-        height: 100vh;
-        overflow: hidden;
-    }
+body {
+  margin: 0;
+  font-family: "Poppins", "Segoe UI", sans-serif;
+  background: var(--bg);
+  color: var(--text);
+  min-height: 100vh;
+  padding: 20px;
+  box-sizing: border-box;
+}
 
-    /* ───────────────────────────
-       LEFT PANELS (Same layout as Idol Shuffler)
-       ─────────────────────────── */
-    #idolPanel {
-        width: 210px;
-        background: var(--panel);
-        border-right: 1px solid #2a2a2a;
-        padding: 10px;
-        overflow-y: auto;
-    }
+h1 {
+  text-align: center;
+  background: linear-gradient(90deg, var(--accent), #b57aff);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
 
-    #categoryPanel {
-        width: 170px;
-        background: var(--panel);
-        border-right: 1px solid #2a2a2a;
-        padding: 10px;
-        overflow-y: auto;
-    }
+.search-container {
+  display: flex;
+  gap: 8px;
+  width: 360px;
+  max-width: 95vw;
+  margin: 0 auto 15px;
+}
 
-    h2 {
-        margin: 10px 0 6px;
-        font-size: 15px;
-        color: var(--accent);
-    }
+#searchInput {
+  flex: 1;
+  padding: 10px;
+  border-radius: 8px;
+  background: var(--card);
+  border: 1px solid #333;
+  color: var(--text);
+}
 
-    .side-btn {
-        background: var(--card);
-        border: 1px solid #2d2d2d;
-        padding: 8px;
-        margin-bottom: 6px;
-        border-radius: 8px;
-        color: var(--text);
-        width: 100%;
-        cursor: pointer;
-        font-size: 13px;
-        transition: 0.2s;
-        text-align: left;
-    }
+#searchBtn {
+  background: var(--card);
+  border: 1px solid #333;
+  color: var(--text);
+  border-radius: 8px;
+  cursor: pointer;
+  padding: 10px 14px;
+}
 
-    .side-btn:hover {
-        background: #262626;
-        border-color: var(--accent);
-        color: var(--accent-soft);
-    }
+.controls {
+  text-align: center;
+  margin-bottom: 15px;
+}
 
-    .side-btn.active {
-        background: #2b2b2b;
-        border-color: var(--accent);
-        color: var(--accent);
-    }
+.toggle {
+  background: var(--card);
+  border: 1px solid #333;
+  color: var(--text);
+  padding: 8px 12px;
+  border-radius: 8px;
+  cursor: pointer;
+  margin: 0 4px;
+}
 
-    /* ───────────────────────────
-       TRUE IDOL-SHUFFLER THUMBNAIL CSS
-       ─────────────────────────── */
+/* ✅ MAIN GRID VIEW */
+#thumbGrid {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(140px, 1fr));
+  gap: 14px;
+  margin-top: 20px;
+}
 
-    #gallery {
-        flex: 1;
-        overflow-y: auto;
-        padding: 20px;
-        display: grid;
-        gap: 18px;
-        grid-template-columns: repeat(auto-fill, minmax(220px, 1fr)); /* identical behavior */
-        background: var(--bg);
-    }
+.grid-item {
+  position: relative;
+  border-radius: 12px;
+  overflow: hidden;
+  border: 1px solid #333;
+  cursor: pointer;
+}
 
-    .thumb {
-        background: var(--card);
-        border-radius: 12px;
-        border: 1px solid #333;
-        overflow: hidden;
-        cursor: pointer;
-        transition: transform 0.18s ease, border-color 0.18s ease, box-shadow 0.18s ease;
-    }
+.grid-item:hover {
+  border-color: var(--accent);
+}
 
-    .thumb:hover {
-        transform: scale(1.04);
-        border-color: var(--accent);
-        box-shadow: 0 0 10px rgba(255, 122, 203, 0.45);
-    }
+.grid-item img, .grid-item video {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
 
-    /* Natural-sized thumbnails — EXACT Shuffler behavior */
-    .thumb img,
-    .thumb video {
-        width: 100%;
-        height: auto;
-        object-fit: cover;  /* same as shuffler */
-        display: block;
-    }
+.grid-label {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background: rgba(0,0,0,.65);
+  font-size: 12px;
+  padding: 4px;
+  text-align: center;
+}
 
-    /* ───────────────────────────
-       VIEWER
-       ─────────────────────────── */
-    #viewer {
-        position: fixed;
-        inset: 0;
-        display: none;
-        justify-content: center;
-        align-items: center;
-        background: rgba(0,0,0,0.88);
-        z-index: 999;
-    }
+/* Side Panels */
+#idolButtons, #categoryPanel {
+  position: fixed;
+  top: 0;
+  height: 100%;
+  background: #111;
+  overflow-y: auto;
+  padding: 10px;
+  width: 180px;
+  display: none;
+  z-index: 999;
+}
 
-    #viewerContent img,
-    #viewerContent video {
-        max-width: 95vw;
-        max-height: 92vh;
-        border-radius: 12px;
-        border: 2px solid var(--accent);
-    }
+#idolButtons { left: 0; }
+#categoryPanel { right: 0; }
 
-    #closeViewer {
-        position: absolute;
-        top: 20px;
-        right: 30px;
-        background: #000;
-        padding: 7px 14px;
-        color: white;
-        border: 1px solid #555;
-        border-radius: 6px;
-        cursor: pointer;
-        font-size: 15px;
-    }
+.idol-btn, .category-btn {
+  width: 100%;
+  margin-bottom: 6px;
+  background: var(--card);
+  border: 1px solid #333;
+  color: var(--text);
+  padding: 6px;
+  border-radius: 6px;
+  cursor: pointer;
+}
 
+.idol-btn.active, .category-btn.active {
+  border-color: var(--accent);
+  color: var(--accent);
+}
 </style>
 </head>
+
 <body>
 
-<!-- PANELS -->
-<div id="idolPanel">
-    <h2>Idols</h2>
-    <div id="idolList"></div>
+<h1>🔎 Idol Searcher</h1>
+
+<div class="search-container">
+  <input id="searchInput" placeholder="Search idol..." />
+  <button id="searchBtn">Search</button>
 </div>
 
-<div id="categoryPanel">
-    <h2>Categories</h2>
-    <div id="categoryList"></div>
+<div class="controls">
+  <span class="toggle" id="catalogToggle">Idols</span>
+  <span class="toggle" id="categoryToggle">Categories</span>
 </div>
 
-<!-- GALLERY -->
-<div id="gallery"></div>
+<div id="idolButtons"></div>
+<div id="categoryPanel"></div>
 
-<!-- VIEWER -->
-<div id="viewer">
-    <button id="closeViewer">Close</button>
-    <div id="viewerContent"></div>
-</div>
+<!-- ✅ MAIN THUMB GRID -->
+<div id="thumbGrid"></div>
 
 <script>
-/* Data sources */
-const MEDIA1 = "https://raw.githubusercontent.com/beltedblinds/Idol-Categorizer/main/idol_gallery_links.txt";
-const MEDIA2 = "https://raw.githubusercontent.com/beltedblinds/Idol-Categorizer/main/idol_gallery_links_02.txt";
-const CATFILE = "https://raw.githubusercontent.com/beltedblinds/Idol-Categorizer/main/categories.txt";
+const MEDIA_URL = "https://raw.githubusercontent.com/beltedblinds/Idol-Categorizer/main/idol_gallery_links.txt";
+const MEDIA_URL_02 = "https://raw.githubusercontent.com/beltedblinds/Idol-Categorizer/main/idol_gallery_links_02.txt";
+const CAT_URL = "https://raw.githubusercontent.com/beltedblinds/Idol-Categorizer/main/categories.txt";
 
 let catalog = [];
+let filteredCatalog = [];
 let categories = [];
+let currentIdolFilter = null;
+let currentCategoryFilter = null;
 
-let currentIdol = null;
-let currentCategory = null;
+const grid = document.getElementById("thumbGrid");
+const idolButtons = document.getElementById("idolButtons");
+const categoryPanel = document.getElementById("categoryPanel");
 
-/* Elements */
-const idolList = document.getElementById("idolList");
-const categoryList = document.getElementById("categoryList");
-const gallery = document.getElementById("gallery");
-
-const viewer = document.getElementById("viewer");
-const viewerContent = document.getElementById("viewerContent");
-document.getElementById("closeViewer").onclick = () => viewer.style.display = "none";
-
-/* Parse catalog line */
-function parse(txt) {
-    return txt.split("\n")
-        .map(l => l.trim())
-        .filter(Boolean)
-        .map(line => {
-            const p = line.split(",").map(x => x.trim());
-            return {
-                folder: p[0],
-                raw: p[1],
-                thumb: p[2],
-                category: p[3] || ""
-            };
-        });
+function parseCatalogText(text) {
+  return text.split("\n").map(l=>{
+    const p=l.split(",").map(x=>x.trim());
+    return {folder:p[0],raw:p[1],thumb:p[2],category:p[3]||""};
+  }).filter(x=>x.folder&&x.raw&&x.thumb);
 }
 
-/* Load data */
-async function loadCatalog() {
-    const [r1, r2] = await Promise.all([fetch(MEDIA1), fetch(MEDIA2)]);
-    const [t1, t2] = await Promise.all([r1.text(), r2.text()]);
-    catalog = [...parse(t1), ...parse(t2)];
-    buildIdolButtons();
+function renderGrid() {
+  grid.innerHTML="";
+  filteredCatalog.forEach(it=>{
+    const d=document.createElement("div");
+    d.className="grid-item";
+    const isVid=/\.(mp4|webm|mov)$/i.test(it.raw);
+    d.innerHTML= isVid
+      ? `<video src="${it.raw}" muted loop></video>`
+      : `<img src="${it.thumb}">`;
+    d.innerHTML+=`<div class="grid-label">${it.folder}</div>`;
+    grid.appendChild(d);
+  });
 }
 
-async function loadCategories() {
-    const t = await (await fetch(CATFILE)).text();
-    categories = t.split("\n").map(x => x.trim()).filter(Boolean);
-    buildCategoryButtons();
+function applyFilters() {
+  filteredCatalog = catalog.filter(it=>{
+    const idolMatch = !currentIdolFilter || it.folder===currentIdolFilter;
+    const catMatch = !currentCategoryFilter || it.category===currentCategoryFilter;
+    return idolMatch && catMatch;
+  });
+  renderGrid();
 }
 
-/* Sidebar buttons */
-function buildIdolButtons() {
-    idolList.innerHTML = "";
-    const idols = [...new Set(catalog.map(x => x.folder))];
-
-    idols.forEach(name => {
-        const b = document.createElement("button");
-        b.className = "side-btn";
-        b.textContent = name;
-        b.onclick = () => selectIdol(name, b);
-        idolList.appendChild(b);
-    });
+function renderIdolButtons() {
+  idolButtons.innerHTML="";
+  [...new Set(catalog.map(i=>i.folder))].forEach(name=>{
+    const b=document.createElement("button");
+    b.className="idol-btn";
+    b.textContent=name;
+    b.onclick=()=>{currentIdolFilter=name;applyFilters();}
+    idolButtons.appendChild(b);
+  });
 }
 
-function buildCategoryButtons() {
-    categoryList.innerHTML = "";
-    categories.forEach(cat => {
-        const b = document.createElement("button");
-        b.className = "side-btn";
-        b.textContent = cat;
-        b.onclick = () => selectCategory(cat, b);
-        categoryList.appendChild(b);
-    });
+function renderCategoryButtons() {
+  categoryPanel.innerHTML="";
+  categories.forEach(cat=>{
+    const b=document.createElement("button");
+    b.className="category-btn";
+    b.textContent=cat;
+    b.onclick=()=>{currentCategoryFilter=cat;applyFilters();}
+    categoryPanel.appendChild(b);
+  });
 }
 
-function highlight(group, active) {
-    [...group.children].forEach(b => b.classList.remove("active"));
-    if (active) active.classList.add("active");
-}
+document.getElementById("catalogToggle").onclick=()=>{
+  idolButtons.style.display = idolButtons.style.display==="block"?"none":"block";
+};
 
-/* Selection */
-function selectIdol(name, btn) {
-    currentIdol = name;
-    currentCategory = null;
-    highlight(idolList, btn);
-    highlight(categoryList, null);
-    renderGallery();
-}
+document.getElementById("categoryToggle").onclick=()=>{
+  categoryPanel.style.display = categoryPanel.style.display==="block"?"none":"block";
+};
 
-function selectCategory(cat, btn) {
-    currentCategory = cat;
-    currentIdol = null;
-    highlight(categoryList, btn);
-    highlight(idolList, null);
-    renderGallery();
-}
+document.getElementById("searchBtn").onclick=()=>{
+  const term=document.getElementById("searchInput").value.toLowerCase();
+  filteredCatalog=catalog.filter(i=>i.folder.toLowerCase().includes(term));
+  renderGrid();
+};
 
-/* Render thumbnails */
-function renderGallery() {
-    gallery.innerHTML = "";
-
-    let items = catalog;
-    if (currentIdol) items = items.filter(x => x.folder === currentIdol);
-    if (currentCategory) items = items.filter(x => x.category === currentCategory);
-
-    items.forEach(item => {
-        const div = document.createElement("div");
-        div.className = "thumb";
-
-        const isVideo = /\.(mp4|webm|mov)$/i.test(item.raw);
-        div.innerHTML = isVideo
-            ? `<video src="${item.thumb || item.raw}" muted></video>`
-            : `<img src="${item.thumb || item.raw}">`;
-
-        div.onclick = () => openViewer(item);
-        gallery.appendChild(div);
-    });
-}
-
-/* Viewer */
-function openViewer(item) {
-    viewer.style.display = "flex";
-
-    const isVideo = /\.(mp4|webm|mov)$/i.test(item.raw);
-    viewerContent.innerHTML = isVideo
-        ? `<video src="${item.raw}" controls autoplay></video>`
-        : `<img src="${item.raw}">`;
-}
-
-/* Init */
-loadCatalog();
-loadCategories();
+// LOAD DATA
+(async()=>{
+  const [a,b,c]=await Promise.all([
+    fetch(MEDIA_URL).then(r=>r.text()),
+    fetch(MEDIA_URL_02).then(r=>r.text()),
+    fetch(CAT_URL).then(r=>r.text())
+  ]);
+  catalog=parseCatalogText(a+"\n"+b);
+  filteredCatalog=catalog.slice();
+  categories=c.split("\n").map(x=>x.trim()).filter(Boolean);
+  renderGrid();
+  renderIdolButtons();
+  renderCategoryButtons();
+})();
 </script>
 </body>
 </html>
