--- a/index.html
+++ b/index.html
@@ -3,97 +3,16 @@
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
-<title>🔎 Idol Searcher</title>
-
+<title>🎵 Idol Searcher</title>
 <style>
-:root {
-  --bg: radial-gradient(circle at top, #141414 0%, #0a0a0a 100%);
-  --card: #1b1b1b;
-  --accent: #ff7bcb;
-  --accent-hover: #ff94d8;
-  --text: #f4f4f4;
-  --muted: #aaa;
-}
-
 body {
   margin: 0;
-  font-family: "Poppins", "Segoe UI", sans-serif;
-  background: var(--bg);
-  color: var(--text);
-  min-height: 100vh;
-  padding: 20px 20px 20px 380px; /* ✅ space for always-open panels */
-  box-sizing: border-box;
+  font-family: system-ui, sans-serif;
+  background: #0c0c0c;
+  color: #eee;
 }
 
-h1 {
-  text-align: center;
-  background: linear-gradient(90deg, var(--accent), #b57aff);
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
-}
-
-.search-container {
-  display: flex;
-  gap: 8px;
-  width: 360px;
-  max-width: 95vw;
-  margin: 0 auto 15px;
-}
-
-#searchInput {
-  flex: 1;
-  padding: 10px;
-  border-radius: 8px;
-  background: var(--card);
-  border: 1px solid #333;
-  color: var(--text);
-}
-
-#searchBtn {
-  background: var(--card);
-  border: 1px solid #333;
-  color: var(--text);
-  border-radius: 8px;
-  cursor: pointer;
-  padding: 10px 14px;
-}
-
-/* ✅ MAIN GRID VIEW */
-#thumbGrid {
-  display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(140px, 1fr));
-  gap: 14px;
-  margin-top: 20px;
-}
-
-.grid-item {
-  position: relative;
-  border-radius: 12px;
-  overflow: hidden;
-  border: 1px solid #333;
-  cursor: pointer;
-}
-
-.grid-item:hover { border-color: var(--accent); }
-
-.grid-item img, .grid-item video {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-}
-
-.grid-label {
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  background: rgba(0,0,0,.65);
-  font-size: 12px;
-  padding: 4px;
-  text-align: center;
-}
-
-/* ✅ ALWAYS-OPEN IDOL PANEL */
+/* ===== LEFT PANELS ===== */
 #idolButtons {
   position: fixed;
   top: 0;
@@ -106,160 +25,211 @@ h1 {
   padding: 10px;
   box-sizing: border-box;
   z-index: 999;
-  scrollbar-width: none; /* Firefox */
-  -ms-overflow-style: none; /* IE & Edge */
+  scrollbar-width: none;
+  -ms-overflow-style: none;
 }
+#idolButtons::-webkit-scrollbar { display: none; }
 
-#idolButtons::-webkit-scrollbar {
-  display: none; /* Chrome, Safari */
-}
-
-/* ✅ ALWAYS-OPEN CATEGORY PANEL NEXT TO IT */
-#categoryPanel {
+#categoryButtons {
   position: fixed;
   top: 0;
   left: 200px;
   height: 100%;
-  width: 180px;
-  background: #111;
+  width: 200px;
+  background: #141414;
   border-right: 1px solid #333;
   overflow-y: auto;
   padding: 10px;
   box-sizing: border-box;
   z-index: 998;
+  scrollbar-width: none;
+  -ms-overflow-style: none;
+}
+#categoryButtons::-webkit-scrollbar { display: none; }
+
+/* ===== MAIN PANEL ===== */
+#mainPanel {
+  margin-left: 400px;
+  padding: 15px;
 }
 
-.idol-btn, .category-btn {
+#searchBar {
+  width: 100%;
+  padding: 10px;
+  font-size: 16px;
+  margin-bottom: 15px;
+  border-radius: 6px;
+  border: 1px solid #333;
+  background: #111;
+  color: #fff;
+}
+
+#grid {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(180px, 1fr));
+  gap: 10px;
+}
+
+.thumb {
+  width: 100%;
+  border-radius: 8px;
+  cursor: pointer;
+  background: #000;
+}
+
+button {
   width: 100%;
   margin-bottom: 6px;
-  background: var(--card);
+  padding: 6px;
+  background: #222;
+  color: #eee;
   border: 1px solid #333;
-  color: var(--text);
-  padding: 8px 10px;
-  border-radius: 8px;
-  font-size: 13px;
-  cursor: pointer;
+  border-radius: 6px;
   text-align: left;
+  cursor: pointer;
+}
+button.active {
+  background: #444;
 }
 
-.idol-btn:hover, .category-btn:hover {
-  background: #272727;
-  border-color: var(--accent);
-  color: var(--accent-hover);
-}
-
-.idol-btn.active, .category-btn.active {
-  border-color: var(--accent);
-  color: var(--accent);
+#counter {
+  margin-bottom: 10px;
+  opacity: 0.8;
 }
 </style>
 </head>
-
 <body>
 
-<h1>🔎 Idol Searcher</h1>
+<div id="idolButtons"></div>
+<div id="categoryButtons"></div>
 
-<div class="search-container">
-  <input id="searchInput" placeholder="Search idol..." />
-  <button id="searchBtn">Search</button>
+<div id="mainPanel">
+  <input id="searchBar" placeholder="Search..." />
+  <div id="counter"></div>
+  <div id="grid"></div>
 </div>
 
-<!-- ✅ ALWAYS VISIBLE PANELS -->
-<div id="idolButtons"></div>
-<div id="categoryPanel"></div>
-
-<!-- ✅ MAIN THUMB GRID -->
-<div id="thumbGrid"></div>
-
 <script>
-const MEDIA_URL = "https://raw.githubusercontent.com/beltedblinds/Idol-Categorizer/main/idol_gallery_links.txt";
-const MEDIA_URL_02 = "https://raw.githubusercontent.com/beltedblinds/Idol-Categorizer/main/idol_gallery_links_02.txt";
-const CAT_URL = "https://raw.githubusercontent.com/beltedblinds/Idol-Categorizer/main/categories.txt";
-
 let catalog = [];
 let filteredCatalog = [];
-let categories = [];
 let currentIdolFilter = null;
 let currentCategoryFilter = null;
 
-const grid = document.getElementById("thumbGrid");
-const idolButtons = document.getElementById("idolButtons");
-const categoryPanel = document.getElementById("categoryPanel");
-
+/* ======= NORMALIZED PARSER (FIXES 25 vs 30 BUG) ======= */
 function parseCatalogText(text) {
   return text.split("\n").map(l=>{
-    const p=l.split(",").map(x=>x.trim());
-    return {folder:p[0],raw:p[1],thumb:p[2],category:p[3]||""};
-  }).filter(x=>x.folder&&x.raw&&x.thumb);
+    const p = l.split(",").map(x => x.trim());
+    const folder = (p[0] || "").replace(/\s+/g, " ").trim();
+    const raw = (p[1] || "").trim();
+    const thumb = (p[2] || "").trim();
+    const category = (p[3] || "").replace(/\s+/g, " ").trim();
+    return { folder, raw, thumb, category };
+  }).filter(x => x.folder && x.raw && x.thumb);
 }
 
-function renderGrid() {
-  grid.innerHTML="";
-  filteredCatalog.forEach(it=>{
-    const d=document.createElement("div");
-    d.className="grid-item";
-    const isVid=/\.(mp4|webm|mov)$/i.test(it.raw);
-    d.innerHTML= isVid
-      ? `<video src="${it.raw}" muted loop></video>`
-      : `<img src="${it.thumb}">`;
-    d.innerHTML+=`<div class="grid-label">${it.folder}</div>`;
-    grid.appendChild(d);
-  });
-}
-
+/* ======= FILTERING ======= */
 function applyFilters() {
-  filteredCatalog = catalog.filter(it=>{
-    const idolMatch = !currentIdolFilter || it.folder===currentIdolFilter;
-    const catMatch = !currentCategoryFilter || it.category===currentCategoryFilter;
+  const idolNorm = currentIdolFilter ? currentIdolFilter.trim().toLowerCase() : "";
+  const catNorm = currentCategoryFilter ? currentCategoryFilter.trim().toLowerCase() : "";
+
+  filteredCatalog = catalog.filter(it => {
+    const folderNormalized = (it.folder || "").trim().toLowerCase();
+    const categoryNormalized = (it.category || "").trim().toLowerCase();
+
+    const idolMatch = !idolNorm || folderNormalized === idolNorm;
+    const catMatch = !catNorm || categoryNormalized === catNorm;
     return idolMatch && catMatch;
   });
+
   renderGrid();
 }
 
+/* ======= RENDER IDOLS ======= */
 function renderIdolButtons() {
-  idolButtons.innerHTML="";
-  [...new Set(catalog.map(i=>i.folder))].forEach(name=>{
-    const b=document.createElement("button");
-    b.className="idol-btn";
-    b.textContent=name;
-    if (currentIdolFilter===name) b.classList.add("active");
-    b.onclick=()=>{currentIdolFilter=name;applyFilters();renderIdolButtons();};
-    idolButtons.appendChild(b);
+  const map = {};
+  catalog.forEach(it => {
+    const key = it.folder;
+    map[key] = (map[key] || 0) + 1;
+  });
+
+  const host = document.getElementById("idolButtons");
+  host.innerHTML = "<b>Idols</b><br><br>";
+
+  Object.keys(map).sort().forEach(idol => {
+    const btn = document.createElement("button");
+    btn.textContent = `${idol} (${map[idol]})`;
+    if (currentIdolFilter === idol) btn.classList.add("active");
+    btn.onclick = () => {
+      currentIdolFilter = idol;
+      renderIdolButtons();
+      applyFilters();
+    };
+    host.appendChild(btn);
   });
 }
 
+/* ======= RENDER CATEGORIES ======= */
 function renderCategoryButtons() {
-  categoryPanel.innerHTML="";
-  categories.forEach(cat=>{
-    const b=document.createElement("button");
-    b.className="category-btn";
-    b.textContent=cat;
-    if (currentCategoryFilter===cat) b.classList.add("active");
-    b.onclick=()=>{currentCategoryFilter=cat;applyFilters();renderCategoryButtons();};
-    categoryPanel.appendChild(b);
+  const map = {};
+  catalog.forEach(it => {
+    if (!it.category) return;
+    map[it.category] = (map[it.category] || 0) + 1;
+  });
+
+  const host = document.getElementById("categoryButtons");
+  host.innerHTML = "<b>Categories</b><br><br>";
+
+  Object.keys(map).sort().forEach(cat => {
+    const btn = document.createElement("button");
+    btn.textContent = `${cat} (${map[cat]})`;
+    if (currentCategoryFilter === cat) btn.classList.add("active");
+    btn.onclick = () => {
+      currentCategoryFilter = cat;
+      renderCategoryButtons();
+      applyFilters();
+    };
+    host.appendChild(btn);
   });
 }
 
-document.getElementById("searchBtn").onclick=()=>{
-  const term=document.getElementById("searchInput").value.toLowerCase();
-  filteredCatalog=catalog.filter(i=>i.folder.toLowerCase().includes(term));
+/* ======= GRID ======= */
+function renderGrid() {
+  const grid = document.getElementById("grid");
+  const counter = document.getElementById("counter");
+  counter.textContent = `${filteredCatalog.length} items`; 
+  grid.innerHTML = "";
+
+  filteredCatalog.forEach(it => {
+    const img = document.createElement("img");
+    img.src = it.thumb;
+    img.className = "thumb";
+    img.onclick = () => window.open(it.raw, "_blank");
+    grid.appendChild(img);
+  });
+}
+
+/* ======= SEARCH ======= */
+const searchBar = document.getElementById("searchBar");
+searchBar.oninput = () => {
+  const q = searchBar.value.toLowerCase();
+  filteredCatalog = catalog.filter(it =>
+    it.folder.toLowerCase().includes(q) ||
+    it.category.toLowerCase().includes(q)
+  );
   renderGrid();
 };
 
-// LOAD DATA
-(async()=>{
-  const [a,b,c]=await Promise.all([
-    fetch(MEDIA_URL).then(r=>r.text()),
-    fetch(MEDIA_URL_02).then(r=>r.text()),
-    fetch(CAT_URL).then(r=>r.text())
-  ]);
-  catalog=parseCatalogText(a+"\n"+b);
-  filteredCatalog=catalog.slice();
-  categories=c.split("\n").map(x=>x.trim()).filter(Boolean);
-  renderGrid();
-  renderIdolButtons();
-  renderCategoryButtons();
-})();
+/* ======= LOAD DATA ======= */
+fetch("catalog.txt")
+  .then(r => r.text())
+  .then(text => {
+    catalog = parseCatalogText(text);
+    filteredCatalog = catalog.slice();
+
+    renderIdolButtons();
+    renderCategoryButtons();
+    applyFilters();
+  });
 </script>
 </body>
 </html>
